--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,10 @@ Authors@R:
            role = c("aut", "cre"),
            email = "first.last@example.com")
 Description: What the package does (one paragraph).
-License: What license it uses
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
+VignetteBuilder: knitr
+RoxygenNote: 7.1.1
+Imports: R6, magrittr
+Suggests: knitr, rmarkdown, lubridate, ggplot2, plyr, qpdf
